io-hotmoka-examples/src/main/java/io/hotmoka/examples/errors/inconsistentredpayable1/Sub.java
package io.hotmoka.examples.errors.inconsistentredpayable1;

import io.takamaka.code.lang.FromContract;

public class Sub extends Super {
	public @FromContract void m() {}
}